<resources>
    <!--App-->
    <string name="app_name">Template</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>

    <!--Main-->
    <string name="cd_menu">Menu</string>
    <string name="cd_search">Search</string>
    <string name="cd_account">Account</string>
    <string name="cd_clear">Clear</string>
    <string name="cd_back">Back</string>
    <string name="cd_close">Close</string>
    <string name="cd_settings">Settings</string>
    <string name="cd_favorite">Favorite</string>
    <string name="message_in_app_update_new_version_available">New version is available</string>
    <string name="action_update">Update</string>
    <string name="bottom_sheet_dialog">Bottom Sheet Dialog</string>
    <string name="bottom_item_compose">Compose</string>
    <string name="bottom_item_android">Android</string>
    <string name="bottom_item_other">Other</string>

    <!--Ads-->
    <string name="title_ads">Ads</string>
    <string name="show_ad">Show Ad</string>

    <!--Browser-->
    <string name="title_browser">Browser</string>
    <string name="start_browser">Start Browser</string>
    <string name="start_in_app_browser">Start In-App Browser</string>

    <!--Clipboard-->
    <string name="title_clipboard">Clipboard</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="paste_from_clipboard">Paste from Clipboard</string>
    <string name="clear_clipboard">Clear Clipboard</string>

    <!--Remote Config-->
    <string name="title_remote_config">Remote Config</string>
    <string name="button_fetch_boolean">Fetch Boolean Value</string>
    <string name="button_fetch_string">Fetch String Value</string>
    <string name="button_fetch_number">Fetch Number Value</string>

    <!--Constraints-->
    <string name="title_constraints_baseline">Constraints Baseline</string>
    <string name="constraints_baseline">Пример позиционирования по линии выравнивания контента элемента.</string>
    <string name="constraints_baseline_to">Baseline to</string>
    <string name="constraints_baseline_of">Baseline of</string>
    <string name="title_constraints_chains">Constraints Chains</string>
    <string name="constraints_chains">Пример позиционирования элементов цепочкой по центру без использования Guideline.</string>
    <string name="title_constraints_circular">Constraints Circular</string>
    <string name="constraints_circular">Пример позиционирования центра виджета относительно центра другого виджета под углом и на расстоянии, что позволяет разместить виджет в круге</string>
    <string name="title_constraints_constrained_width">Constraints Constrained Width</string>
    <string name="constraints_constrained_width">Пример ограниченной длины view в зависимости от размера контента.</string>
    <string name="title_constraints_gone_margins">Constraints Gone Margins</string>
    <string name="constraints_gone_margins">Пример позиционирования виджета с gone margins. Отступ слева при видимости view1 равен 8dp, при его невидимости 16dp</string>
    <string name="title_constraints_guideline">Constraints Guideline</string>
    <string name="constraints_guideline">Пример позиционирования элементов относительно невидимой линии Guideline</string>
    <string name="title_constraints_text_dynamic_width">Constraints Text Dynamic</string>
    <string name="constraints_text_dynamic_width">Пример выравнивания высоты текста любого объема с положением start|top</string>

    <!--Dialogs-->
    <string name="title_dialogs">Dialogs</string>
    <string name="bottom_sheet">BottomSheet</string>
    <string name="date_picker">Date Picker</string>
    <string name="time_picker">Time Picker</string>
    <string name="alert_dialog">Alert Dialog</string>

    <!--Fonts-->
    <string name="title_fonts">Fonts</string>

    <!--In-App Review-->
    <string name="title_in_app_review">In-App Review</string>

    <!--Intent-->
    <string name="title_intents">Intents</string>
    <string name="share_intent">Share Intent</string>
    <string name="share_via">Share Via</string>
    <string name="email_intent">Email Intent</string>
    <string name="email_via">Email Via</string>
    <string name="google_play">Google Play</string>
    <string name="open_telegram_chat">Telegram Chat</string>

    <!--Nav Args-->
    <string name="title_nav_args">Nav Args</string>

    <!--Network Image-->
    <string name="title_network_image">Network Image</string>

    <!--Notifications-->
    <string name="title_notifications">Notifications</string>
    <string name="notifications_enabled">Notifications Enabled</string>
    <string name="notifications_disabled">Notifications Disabled</string>
    <string name="cd_notifications_enabled">Notifications Enabled</string>
    <string name="cd_notifications_disabled">Notifications Disabled</string>

    <!--Saved State-->
    <string name="title_saved_state">Saved State</string>

    <!--Settings Panel-->
    <string name="title_settings_panel">Settings Panel</string>
    <string name="settings_panel_connectivity">Internet Connectivity</string>
    <string name="settings_panel_nfc">NFC</string>
    <string name="settings_panel_volume">Volume</string>
    <string name="settings_panel_wifi">Wi-Fi</string>

    <!--Social-->
    <string name="title_social">Social</string>
    <string name="sign_in_google">Sign In with Google</string>
    <string name="sign_in_vk">Sign In with VK</string>
    <string name="sign_in_facebook">Sign In with Facebook</string>

    <!--System Services-->
    <string name="title_system_services">System Services</string>
    <string name="button_vibrate">Vibrate</string>
    <string name="button_voice">Voice Input</string>
    <string name="play_services_available">Google Play Services Available</string>
    <string name="play_services_not_available">Google Play Services Not Available</string>
    <string name="internet_connected">Internet is Connected</string>
    <string name="internet_not_connected">Internet is Not Connected</string>
    <string name="wifi_connected">Wi-Fi is Connected</string>
    <string name="wifi_not_connected">Wi-Fi is Not Connected</string>
    <string name="bluetooth_enabled">Bluetooth is Enabled</string>
    <string name="bluetooth_disabled">Bluetooth is Disabled</string>
    <string name="battery_charging">Battery is Charging</string>
    <string name="battery_not_charging">Battery is Not Charging</string>
    <string name="battery_level">Battery Level: %d</string>

    <!--Timer-->
    <string name="title_timer">Timer</string>
    <string name="start_timer">Start Timer</string>
    <string name="time_over">Time is Over!</string>

    <!--Toast-->
    <string name="title_toast">Toast</string>
    <string name="show_toast">Show Toast</string>

    <!--Window Insets-->
    <string name="title_window_insets">Window Insets</string>
    <string name="show_keyboard">Show Keyboard</string>
    <string name="hide_keyboard">Hide Keyboard</string>
    <string name="show_status_bar">Show StatusBar</string>
    <string name="hide_status_bar">Hide StatusBar</string>

    <!--GitHub Api-->
    <string name="title_github">GitHub Api</string>
    <string name="loading">Loading</string>
    <string name="language">Language: %s</string>
    <string name="search_hint">GitHub Repository</string>
    <string name="no_results">No results 😓</string>
    <string name="unknown">\?</string>
    <string name="retry">Retry</string>

    <!--Tmdb Api-->
    <string name="title_tmdb">Tmdb Api</string>

    <!--Lemonade Sample-->
    <string name="lemon_select">Click to select a lemon!</string>
    <string name="lemon_squeeze">Click to juice the lemon!</string>
    <string name="lemon_drink">Click to drink your lemonade!</string>
    <string name="lemon_empty_glass">Click to start again!</string>
    <string name="squeeze_count">Squeeze count: %1$d, keep squeezing!</string>
</resources>