<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="HardcodedText">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:title="@string/title_system_services"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/vibrateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_vibrate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/playServicesTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textSize="14sp"
        android:gravity="start"
        android:fontFamily="@font/open_sans_semibold"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vibrateButton"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/play_services_available"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/internetTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textSize="14sp"
        android:gravity="start"
        android:fontFamily="@font/open_sans_semibold"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playServicesTextView"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/internet_connected"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/wifiTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textSize="14sp"
        android:gravity="start"
        android:fontFamily="@font/open_sans_semibold"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/internetTextView"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/wifi_connected"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/bluetoothTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textSize="14sp"
        android:gravity="start"
        android:fontFamily="@font/open_sans_semibold"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wifiTextView"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/bluetooth_enabled"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/batteryChargingTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textSize="14sp"
        android:gravity="start"
        android:fontFamily="@font/open_sans_semibold"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bluetoothTextView"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/battery_charging"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/batteryLevelTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textSize="14sp"
        android:gravity="start"
        android:fontFamily="@font/open_sans_semibold"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/batteryChargingTextView"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/battery_charging"/>

</androidx.constraintlayout.widget.ConstraintLayout>